--- a/style.css
+++ b/style.css
@@ -1,34 +1,3 @@
-.navigation {
-margin:auto;
-height:70px;
-}
-
-.navigation ul {
-list-style: none;   
-} 
-
-.navigation ul li {
-display: inline;
-margin: 0px;
-}
-
-.navLeft{
-float:left;
-width:13px;
-height:70px;
-background: url("http://placehold.it/13x70") no-repeat;
-}
-
-.navMiddle{
-    float:left;
-    width: calc(100% - 26px);  
-height:70px;
-background-color: green;
-}
-
-.navRight{
-float:right;
-width:13px;
-height:70px;
-background: url("http://placehold.it/13x70") no-repeat;
+body {
+    background-color: #bdbdbd;   
 }
