--- a/style.css
+++ b/style.css
@@ -1,12 +1,7 @@
-body {
-    background-color: #bdbdbd;   
-}
-
 span#title {
     font-size:20px;
     color:grey;
+    border: 2px solid black;
+    padding: 2px;
 }
 
-* {
-    -webkit-user-select: none;
-}
