--- a/style.css
+++ b/style.css
@@ -9,9 +9,9 @@ div > a {
     padding: 2px;
 }
 
-#title {
+#nav {
     border: 2px solid black;
-}
+    border-radius: 5px;
 
 img#border_collie {
     float: left;
