--- a/style.css
+++ b/style.css
@@ -7,6 +7,11 @@ a {
     margin: 5px;
 }
 
+#header {
+    font-size: 20px;
+    text-align: center;
+}
+
 #title {
     font-size:20px;
     color:grey;
