--- a/rpg/style.css
+++ b/rpg/style.css
@@ -1,3 +1,23 @@
 body {
   background: #d9d9d9;
+  padding: 2px;
+  width: 100%;
+}
+
+#text {
+  width: 50%;
+  height: 100%;
+  background-color: #c0c0c0;
+}
+
+#inventory {
+  width: 25%;
+  height: 100%;
+  background-color: #c0c0c0;
+}
+
+#settings {
+  width: 25%;
+  height: 100%;
+  background-color: #c0c0c0;
 }
