--- a/style.css
+++ b/style.css
@@ -7,6 +7,13 @@ a {
     margin: 5px;
 }
 
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
+
 #content {
     text-align:center;
 }
