--- a/style.css
+++ b/style.css
@@ -7,6 +7,11 @@ a {
     margin: 5px;
 }
 
+.currentPage {
+    background-color:black
+    color: white
+}
+
 .center {
     display: block;
     margin-left: auto;
