--- a/style.css
+++ b/style.css
@@ -8,8 +8,8 @@ a {
 }
 
 .currentPage {
-    background-color:black
-    color: white
+    background-color:black;
+    color: white;
 }
 
 .center {
