--- a/style.css
+++ b/style.css
@@ -82,6 +82,10 @@ img#golden_retriever {
     width: 150px;
     height: 150px;
     top: 10px;
+    transition: transform 1s;
+}
+img#golden_retriever:hover{
+    transform: translate3d(360,0,360);
 }
 img#shetland_sheepdog {
     float: left;
