--- a/style.css
+++ b/style.css
@@ -33,17 +33,12 @@ a {
     color:grey;
     border: 2px solid black;
     text-align:center;
-    transition: transform 500ms;
+    transition: background-color 500ms, color 500ms;
 }
 
 #title:hover {
     background-color:black;
     color: white;
-    -webkit-transform: translateX(360deg);
-    transform: translateX(360deg);
-    
-    -webkit-transform: translateZ(360deg);
-    transform: translateZ(360deg);
 }
 
 #click {
