--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ a {
 #header {
     font-size: 20px;
     text-align: center;
+    display: inline;
     transition: background-color 500ms, color 500ms;
 }
 
