--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ a {
     color:grey;
     border: 2px solid black;
     text-align:center;
+    padding: 5px;
     display: inline;
     transition: background-color 500ms, color 500ms;
 }
