--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ a {
     border: 2px solid black;
     text-align:center;
     padding: 5px;
+    margin: 5px;
     display: inline;
     transition: background-color 500ms, color 500ms;
 }
