--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Inconsolata');
+
+* {
+font-family: 'Inconsolata', monospace;
+}
+
 body {
     padding: 0;
     margin: 0;
@@ -70,12 +76,6 @@ img#alaskan_malamute {
     width:150px;
     height:150px;
     top: 10px;
-    transition: width 500ms, height 500ms;
-}
-
-img#alaskan_malamute:hover {
-    height: 200px;
-    width: 200px;
 }
 
 img#golden_retriever {
@@ -85,9 +85,7 @@ img#golden_retriever {
     top: 10px;
     transition: transform 1s;
 }
-img#golden_retriever:hover{
-    -webkit-transform: translate3d(180,0,360);
-}
+
 img#shetland_sheepdog {
     float: left;
     width: 150px;
