--- a/style.css
+++ b/style.css
@@ -62,8 +62,8 @@ a {
 
 img#border_collie,  img#bernese_mountain, img#alaskan_malamute, img#golden_retriever, img#shetland_sheepdog {
     float: left;
-    width: 150px;
-    height: 150px;
+    width: 50%;
+    height: 50%;
     top: 10px;
 }
 
