--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ a {
     color:grey;
     border: 2px solid black;
     text-align:center;
+    display: inline-block;
     transition: background-color 500ms, color 500ms, transform 1500ms;
 }
 
