--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ a {
     text-decoration: underline;
 }
 
-img#border_collie,  img#bernese_mountain, img#alaskan_malamute, img#golden_retriever, img#shetland_sheepdog {
+img#border_collie,  img#bernese_mountain, img#alaskan_malamute, img#golden_retriever, img#shetland_sheepdog, img#shiba {
     float: left;
     width: 15%;
     height: 15%;
