--- a/style.css
+++ b/style.css
@@ -65,12 +65,16 @@ a {
     text-decoration: underline;
 }
 
-img#border_collie,  img#bernese_mountain, img#alaskan_malamute, img#golden_retriever, img#shetland_sheepdog, img#shiba {
+img#border_collie,  img#bernese_mountain, img#alaskan_malamute, img#golden_retriever, img#shetland_sheepdog {
     float: left;
     width: 15%;
     height: 15%;
     top: 10px;
     
+    transition:transform 1000ms;
+}
+
+img#shiba{
     transition:transform 1000ms;
 }
 
