--- a/style.css
+++ b/style.css
@@ -34,6 +34,10 @@ a {
     text-align:center;
 }
 
+.rotate {
+    transform: rotate3d(1,1,1,360deg)
+}
+
 #title {
     font-size:20px;
     color:grey;
