--- a/style.css
+++ b/style.css
@@ -1,97 +1,1 @@
-@import url('https://fonts.googleapis.com/css?family=Inconsolata');
-
-* {
-font-family: 'Inconsolata', monospace;
-}
-
-body {
-    padding: 0;
-    margin: 0;
-}
-
-a {
-    margin: 5px;
-}
-
-#images {
- float:left; 
- vertical-align: text-top;
-}
-
-.currentPage {
-    background-color:black;
-    color: white;
-}
-
-.center {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
-}
-
-#content {
-    text-align:center;
-}
-
-.rotate {
-    transform: rotate3d(1,1,1,360deg)
-}
-
-#title {
-    font-size:20px;
-    color:grey;
-    border: 2px solid black;
-    text-align:center;
-    display: inline-block;
-    transition: background-color 500ms, color 500ms, transform 1500ms;
-}
-
-#title:hover {
-    background-color:black;
-    color: white;
-}
-
-#title:active {    
-    transform: rotate3d(1,1,1,360deg);
-}
-
-#click {
-    user-select: none;
-    text-align:center;
-    font-size:20px;
-}
-
-#nav {
-    text-align:center;
-}
-
-#dogfact {
-    text-align:center;
-}
-
-#click:hover {
-    text-decoration: underline;
-}
-
-img#border_collie,  img#bernese_mountain, img#alaskan_malamute, img#golden_retriever, img#shetland_sheepdog {
-    float: left;
-    width: 15%;
-    height: 15%;
-    top: 10px;
-    
-    transition:transform 1000ms;
-}
-
-img#shiba{
-    transition:transform 1000ms;
-}
-
-img:active{
-    transform: rotate3d(1,1,1,360deg);
-}
-
-#bernese, #border, #malamute, #golden, #shetland{
-    float:left;
-    width: 80%
-}
+@import url(https://fonts.googleapis.com/css?family=Inconsolata);#title:hover,.currentPage{background-color:#000;color:#fff}#click,#title{font-size:20px;text-align:center}#click,#content,#dogfact,#nav,#title{text-align:center}.rotate,img:active{transform:rotate3d(1,1,1,360deg)}*{font-family:Inconsolata,monospace}body{padding:0;margin:0}a{margin:5px}#images{float:left;vertical-align:text-top}.center{display:block;margin-left:auto;margin-right:auto;width:50%}#title{color:grey;border:2px solid #000;display:inline-block;transition:background-color .5s,color .5s,transform 1.5s}#click{user-select:none}#click:hover{text-decoration:underline}img#alaskan_malamute,img#bernese_mountain,img#border_collie,img#golden_retriever,img#shetland_sheepdog{float:left;width:15%;height:15%;top:10px;transition:transform 1s}img#shiba{transition:transform 1s}#bernese,#border,#golden,#malamute,#shetland{float:left;width:80%}
